--- a/webapp/src/locales/translation_en.json
+++ b/webapp/src/locales/translation_en.json
@@ -1,5 +1,5 @@
 {
-    "welcomeMsg": "Welcome to the 2025 edition of the Software Architecture course",
+    "welcomeMsg": "Hey! I'm Thinker! Nice to meet you, ready to play?",
     "login": "Login",
     "logout": "Logout",
     "home": "Home",
