--- a/webapp/src/locales/translation_es.json
+++ b/webapp/src/locales/translation_es.json
@@ -1,5 +1,5 @@
 {
-    "welcomeMsg": "Bienvenido a la edición 2025 del curso de Arquitectura de Software" ,
+    "welcomeMsg": "¡Hola! ¡Soy Thinker! Encantada de conocerte, ¿tienes ganas de jugar?" ,
     "login": "Iniciar sesión",
     "logout": "Cerrar sesión",
     "home": "Inicio",
