--- a/webapp/src/locales/translation_en.json
+++ b/webapp/src/locales/translation_en.json
@@ -16,7 +16,15 @@
     "alreadyAccount": "Already have an account?",
     "loginHere": "Login here",
     "registerTxtBubble": "Nice to see you are on board! Fill in the details and sign up to get started!",
-    "userAddedSuccess": "User added successfully"
-    
+    "userAddedSuccess": "User added successfully",
+    "welcomeButton": "Start the fun!",
+    "settings": "Settings",
+    "language": "Language",
+    "theme": "Theme",
+    "advancedSettings": "Advanced Settings",
+    "llmModel": "LLM Model",
+    "save": "Save",
+    "cancel": "Cancel"
+
     
 }
