--- a/webapp/src/locales/translation_en.json
+++ b/webapp/src/locales/translation_en.json
@@ -24,7 +24,38 @@
     "advancedSettings": "Advanced Settings",
     "llmModel": "LLM Model",
     "save": "Save",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "welcomeBack": "Welcome back,",
+    "ready": "Ready for your next trivia challenge?",
+    "stats": "Your Stats",
+    "ranking": "Ranking",
+    "rounds": "Rounds",
+    "time": "Time",
+    "hide": "Hide",
+    "statsFor": "Your statistics for",
+    "noStats": "No statistics found for this mode.",
+    "totalScore": "Total Score",
+    "accuracyRate": "Accuracy Rate",
+    "gamesPlayed": "Games Played",
+    "recentGames": "Recent Games",
+    "recentMsg1": "Your last",
+    "recentMsg2": "games",
+    "noRecentGames": "No recent games found.",
+    "games": "Games",
+    "game": "Game",
+    "topics": "Topics",
+    "and": "and ",
+    "more": " more",
+    "playedAt": "Played at ",
+    "accuracy": "Accuracy",
+    "leaderboard": "Leaderboard",
+    "topBy": "Top players ranked by",
+    "points": "Points",
+    "rankBy": "Rank by",
+    "gameTopic": "Game Topic",
+    "readyToPlay": "Ready to play?",
+    "chooseGameTopicMsg": "Choose the type of game you want and start playing!",
+    "playNow": "Play a game now"
 
     
 }
