--- a/webapp/src/locales/translation_es.json
+++ b/webapp/src/locales/translation_es.json
@@ -24,5 +24,36 @@
     "advancedSettings": "Configuración avanzada",
     "llmModel": "Modelo LLM",
     "save": "Guardar",
-    "cancel": "Cancelar"
+    "cancel": "Cancelar",
+    "welcomeBack": "!Hola de nuevo,",
+    "ready": "¿Listo para el próximo desafío de trivia?",
+    "stats": "Tus estadísticas",
+    "ranking": "Clasificación",
+    "rounds": "Rondas",
+    "time": "Contrarreloj",
+    "hide": "Ofuscado",
+    "statsFor": "Tus estadísticas en",
+    "noStats": "Aún no tienes estádisticas en este modo.",
+    "totalScore": "Puntuación total",
+    "accuracyRate": "Precisión",
+    "gamesPlayed": "Partidas jugadas",
+    "recentGames": "Partidas recientes",
+    "recentMsg1": "Tus últimas",
+    "recentMsg2": "partidas",
+    "noRecentGames": "No hay partidas recientes.",
+    "games": "Partidas",
+    "game": "Partida",
+    "topics": "Temas",
+    "and": "y ",
+    "more": " más",
+    "playedAt": "Jugado el ",
+    "accuracy": "Precisión",
+    "leaderboard": "Clasificación",
+    "topBy": "Mejores jugadores por",
+    "points": "Puntuación",
+    "rankBy": "Clasificar por",
+    "gameTopic": "Tema",
+    "readyToPlay": "¿Listo para jugar?",
+    "chooseGameTopicMsg": "Elige el tipo de juego que quieres y comienza a jugar",
+    "playNow": "¡Juega ahora!"
 }
