Fixed Tests and improved translations

--- a/webapp/src/locales/translation_es.json
+++ b/webapp/src/locales/translation_es.json
@@ -25,7 +25,7 @@
     "llmModel": "Modelo LLM",
     "save": "Guardar",
     "cancel": "Cancelar",
-    "welcomeBack": "!Hola de nuevo,",
+    "welcomeBack": "¡Hola de nuevo,",
     "ready": "¿Listo para el próximo desafío de trivia?",
     "stats": "Tus estadísticas",
     "ranking": "Clasificación",
