--- a/webapp/src/locales/translation_es.json
+++ b/webapp/src/locales/translation_es.json
@@ -55,5 +55,6 @@
     "gameTopic": "Tema",
     "readyToPlay": "¿Listo para jugar?",
     "chooseGameTopicMsg": "Elige el tipo de juego que quieres y comienza a jugar",
-    "playNow": "¡Juega ahora!"
+    "playNow": "¡Juega ahora!",
+    "rankingBy": "Clasificación por"
 }
