Diagram of part 5.1

--- a/docs/src/05_building_block_view.adoc
+++ b/docs/src/05_building_block_view.adoc
@@ -72,9 +72,9 @@ endif::arc42help[]
 @startuml
 
 storage {
-  actor user
-  rectangle Wikidata
-  rectangle LLM
+  actor user #lightgreen
+  rectangle Wikidata #orange
+  rectangle LLM #orange
   node WIChat
 }
 
